Inital setup of navbar and home page, white space issue needs investigation

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
   height: 56px;
   margin-bottom: 120px;
-  background-color: var(--mantine-color-body);
-  border-bottom: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  background-color: black;
+  color: white;
 }
 
 .inner {
@@ -18,7 +18,11 @@
   padding: 8px 12px;
   border-radius: var(--mantine-radius-sm);
   text-decoration: none;
-  color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
+  color: white;
   font-size: var(--mantine-font-size-sm);
   font-weight: 500;
+}
+
+.link:hover {
+  background-color: gray;
 }
